--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/localtunnel": "^2.0.4",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^6.0.2",
@@ -61,6 +62,8 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "localtunnel": "^2.0.2",
+    "ngrok": "^5.0.0-beta.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
