--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.3",
+    "@nestjs/throttler": "^6.5.0",
     "@sendgrid/mail": "^8.1.6",
     "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^4.0.1",
